--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,7 +65,7 @@
 
   body {
     @apply antialiased bg-background text-foreground;
-    font-family: "Inter", sans-serif;
+    font-family: Poppins, sans-serif;
   }
 }
 
